# patmlkit

./: .gitignore  README.rst  pyproject.toml
patmlkit/: coco.py  image.py  json.py
patmlkit/coco/: coco.py
patmlkit/image/: read_image.py  write_image.py
patmlkit/json/: read_json_file.py  write_json_file.py
tests/: test_patmlkit.py
