[tool.poetry]
name = "patmlkit"
version = "0.1.0"
description = "Pain and tears ML kit - library created to support my journey via PHD"
authors = ["Michal Karol <michal.p.karol@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
