[tool.poetry]
name = "patmlkit"
version = "0.1.3"
description = "Pain and tears ML kit - library created to support my journey via PHD"
authors = ["Michal Karol <michal.p.karol@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"
numpy = "^1.23.3"
opencv-python = "^4.6.0.66"
imagesize = "^1.4.1"
tqdm = "^4.64.1"
pyclipper = "^1.3.0"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
black = "^22.6.0"
poetry = "^1.2.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[project.urls]
source = "https://github.com/MichalKarol/patmlkit"
tracker = "https://github.com/MichalKarol/patmlkit/issues"

